--- a/src/home/index.html
+++ b/src/home/index.html
@@ -283,7 +283,92 @@ body {
           </div>
         </div>
       </div>
-             <!-- Footer Start -->
+            <!-- Services Start -->
+
+            </div>
+            <div class="column-2 image">
+              <img
+                src="./img/shapes/points2.png"
+                class="points points2"
+                alt=""
+              />
+              <img src="./img/person.png" class="img-element z-index" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <section class="services section" id="services">
+        <div class="container">
+          <div class="section-header">
+          
+            <h3 class="title" data-title="What I Do">Services</h3>
+            <p class="text">
+              Specialized in working as a Senior Graphic Designer, 
+              Brand Identity Strategist, Visual and UI/UX Designer.
+            </p>
+          </div>
+
+          <div class="cards">
+            <div class="card-wrap">
+              <img
+                src="./img/shapes/points3.png"
+                class="points points1 points-sq"
+                alt=""
+              />
+              <div class="card" data-card="UI/UX">
+                <div class="card-content z-index">
+                  <img src="./img/design-icon.png" class="icon" alt="" />
+                  <h3 class="title-sm">Graphic Design</h3>
+                  <p class="text">
+                    Specialized in Graphic Deign with experience of five (5) 
+                    plus years.
+                  </p>
+                  <a href="#" class="btn small">Read more</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card-wrap">
+              <div class="card" data-card="Code">
+                <div class="card-content z-index">
+                  <img src="./img/code-icon.png" class="icon" alt="" />
+                  <h3 class="title-sm">Brand Identity & Visual</h3>
+                  <p class="text">
+                    Specialized in working as a Brand Identity Strategist, 
+                    and Visual Identity designer with with experience of four (4) years.
+                  </p>
+                  <a href="#" class="btn small">Read more</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card-wrap">
+              <img
+                src="./img/shapes/points3.png"
+                class="points points2 points-sq"
+                alt=""
+              />
+              <div class="card" data-card="App">
+                <div class="card-content z-index">
+                  <img src="./img/app-icon.png" class="icon" alt="" />
+                  <h3 class="title-sm">UI/UX Design</h3>
+                  <p class="text">
+                    Specialization Google UX Designer (Professional Certified) 
+                    from Google
+                  </p>
+                  <a href="#" class="btn small">Read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <!-- Services End -->
+   
+     <!-- Footer Start -->
 
     <footer class="footer">
       <div class="container">
