--- a/src/home/index.html
+++ b/src/home/index.html
@@ -362,24 +362,7 @@ body {
 
     <!-- Services End -->
    
-       <!-- Projects Start -->
-
-      <section class="records">
-        <div class="overlay overlay-sm">
-          <img src="./img/shapes/square.png" alt="" class="shape square1" />
-          <img src="./img/shapes/square.png" alt="" class="shape square2" />
-          <img src="./img/shapes/circle.png" alt="" class="shape circle" />
-          <img
-            src="./img/shapes/half-circle.png"
-            alt=""
-            class="shape half-circle"
-          />
-          <img src="./img/shapes/wave.png" alt="" class="shape wave wave1" />
-          <img src="./img/shapes/wave.png" alt="" class="shape wave wave2" />
-          <img src="./img/shapes/x.png" alt="" class="shape xshape" />
-          <img src="./img/shapes/triangle.png" alt="" class="shape triangle" />
-        </div>
-
+      
    <!-- Blog Start -->
 
     <header id="header">
@@ -405,7 +388,7 @@ body {
           </div>
 
 
-
+<div>
 
           <div class="section-header">
             <h3 class="title" data-title="Last News">My blog</h3>
@@ -485,7 +468,7 @@ body {
               </div>
             </div>
           </div>
-        </div>
+        </div> </div>
       </section>
 
     </header>
