--- a/src/home/index.html
+++ b/src/home/index.html
@@ -283,12 +283,8 @@ body {
 
             </div>
             <div class="column-2 image">
-              <img
-                src="./img/shapes/points2.png"
-                class="points points2"
-                alt=""
-              />
-            
+             <img src="./img/shapes/points2.png" class="points points2" alt="Image Description" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
+             
               </div>
             </div>
           </div>
