--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@ body {
         }
 
         #mlsapro {
-            background-image: url('https://mlsapro.com/img/shapes/points2.png');
+            background-image: url('https://mlsapro.com/img/shapes/wavy-shape.png');
             background-size: cover;
             background-position: center;
             position: absolute;
