--- a/src/index.html
+++ b/src/index.html
@@ -154,17 +154,24 @@ body {
         }
 
         #mlsapro {
-            background-image: url('https://mlsapro.com/img/shapes/wavy-shape.png');
-            background-size: cover;
-            background-position: center;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #mlsapro::before {
+            content: '';
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-image: url('https://mlsapro.com/img/shapes/wavy-shape.png');
+            background-size: cover;
+            background-position: center;
+            animation: spin 40s linear infinite;
+            z-index: -1;
         }
 
         .skill-box {
@@ -185,15 +192,28 @@ body {
         .skill-box a:hover {
             background-color: #0056b3;
         }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            50% {
+                transform: rotate(180deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 
 <body>
-    <form id="mlsapro">
+    <form id="mlsapro" action="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" method="get">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header">Connect With MLSAPRO Microsoft Tenant Assigned Account</a>
+            <button type="submit" class="btn-header">Connect With MLSAPRO Microsoft Tenant Assigned Account</button>
         </div>
     </form>
 </body>
 
 </html>
+
