--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,6 @@ body {
         }
 
         #mlsapro {
-            background-image: url('https://mlsapro.com/img/shapes/wavy-shape.png');
             background-size: cover;
             background-position: center;
             position: absolute;
@@ -194,6 +193,21 @@ body {
             <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header">Connect With MLSAPRO Microsoft Tenant Assigned Account</a>
         </div>
     </form>
+
+    <script>
+        function preloadImages() {
+            var images = ['https://mlsapro.com/img/shapes/wavy-shape.png', 'https://mlsapro.com/img/shapes/wavy-shape1.png'];
+            for (var i = 0; i < images.length; i++) {
+                var img = new Image();
+                img.src = images[i];
+            }
+        }
+        preloadImages();
+
+        var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+        var backgroundUrl = isMobile ? 'https://mlsapro.com/img/shapes/wavy-shape.png' : 'https://mlsapro.com/img/shapes/wavy-shape1.png';
+        document.getElementById('mlsapro').style.backgroundImage = 'url(' + backgroundUrl + ')';
+    </script>
 </body>
 
 </html>
