--- a/src/index.html
+++ b/src/index.html
@@ -186,11 +186,10 @@ body {
         }
     </style>
 </head>
-
 <body>
     <form id="mlsapro">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header">Connect With MLSAPRO Microsoft Tenant Assigned Account</a>
+            <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header" onclick="openSecondTab()">Connect With MLSAPRO Microsoft Tenant Assigned Account</a>
         </div>
     </form>
 
@@ -207,7 +206,10 @@ body {
         var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
         var backgroundUrl = isMobile ? 'https://mlsapro.com/img/shapes/wavy-shape.png' : 'https://mlsapro.com/img/shapes/wavy-shape1.png';
         document.getElementById('mlsapro').style.backgroundImage = 'url(' + backgroundUrl + ')';
+
+        function openSecondTab() {
+            window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank");
+        }
     </script>
 </body>
 
-</html>
