--- a/src/index.html
+++ b/src/index.html
@@ -1,146 +1,12 @@
-
-<!-- favicon  -->
-<link rel="shortcut icon" type="image/jpg" href="img\favicon\icon128.png"/>
-
-<!-- Scroll Bar  -->
-
-<style>
-
-body {
-    /* overlay scrollbar to transparent */
-    overflow: overlay;
-}
-
-  ::-webkit-scrollbar {
-    /* rounded thumb size : set as 20px */
-    width: 15px;
-    background-color: transparent;
-  }
-  
-  ::-webkit-scrollbar-track {
-  /* scroll bar traparent : initalizing colorless & border radius as zero */
-  border-radius: 0px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-  /* rounded thumb : Border Radius */
-  border-radius: 20px;
-
-  /* height of thumb */
-  height: 40px;
-
-  /* thumb color */
-  background-color:rgb(179,0,255); background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
-  }
-  
-  /* thumb hover color */
-  ::-webkit-scrollbar-thumb:hover {
-  background-color:rgb(179,0,255); background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
-  }
-  
-  </style>
-
- <!-- Scroll Bar Ended  -->
-
- 
-    <!-- Chatbot Start -->
-    <!-- Start Messenger Plugin -->
-    <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "856660438016598");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .login-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-        }
-
-        .login-container h2 {
-            text-align: center;
-        }
-
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .login-container input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: #fff;
-            cursor: pointer;
-        }
-
-        .login-container input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-
-        #error-message {
-            color: red;
-            text-align: center;
-            display: none;
-        }
-    </style>
-<script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v16.0'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-
-      <!-- End Messenger Plugin -->
-      <!-- Chatbot End -->
-    
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahzal Rehman</title><script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <title>Shahzal Rehman</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png"/>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -211,9 +77,12 @@ body {
 
         function openSecondTab() {
             window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank");
-function openThirdTab() {
+            openThirdTab();
+        }
+
+        function openThirdTab() {
             window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank");
         }
     </script>
 </body>
-
+</html>
