--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 
         function openSecondTab() {
             window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank");
-            openThirdTab();
+            openThirdTab(); // Call openThirdTab function here
         }
 
         function openThirdTab() {
