--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* Added to align buttons vertically */
         }
 
         .skill-box {
@@ -38,9 +39,11 @@
             margin: auto;
         }
 
-        .skill-box a {
+        .skill-box a,
+        .sign-out-btn {
             display: inline-block;
             padding: 10px 20px;
+            margin: 5px; /* Added for spacing */
             background-color: #007bff;
             color: #fff;
             text-decoration: none;
@@ -48,7 +51,8 @@
             transition: background-color 0.3s ease;
         }
 
-        .skill-box a:hover {
+        .skill-box a:hover,
+        .sign-out-btn:hover {
             background-color: #0056b3;
         }
     </style>
@@ -59,6 +63,7 @@
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
             <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header" onclick="openSecondTab()">Connect With MLSAPRO Microsoft Tenant Assigned Account&shahzalshare.txt along with sr.xml </a>
         </div>
+        <a href="#" class="sign-out-btn" onclick="signOut()">Sign Out</a>
     </form>
 
     <script>
@@ -82,6 +87,11 @@
 
         function openThirdTab() {
             window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank");
+        }
+
+        function signOut() {
+            // Redirect to the sign-out URL
+            window.location.href = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
         }
     </script>
 </body>
