--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,14 @@
         }
 
         function signOut() {
+            // Construct the sign-out URL
+            var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d"; // Your client ID
+            var postLogoutRedirectUri = encodeURIComponent("https://team.mlsapro.com"); // Redirect URL after sign-out
+            var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
+            var url = authority + "?post_logout_redirect_uri=" + postLogoutRedirectUri;
+
             // Redirect to the sign-out URL
-            window.location.href = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
+            window.location.href = url;
         }
     </script>
 </body>
