--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
         }
 
         .skill-box a,
+        .login-btn,
         .sign-out-btn {
             display: inline-block;
             padding: 10px 20px;
@@ -52,6 +53,7 @@
         }
 
         .skill-box a:hover,
+        .login-btn:hover,
         .sign-out-btn:hover {
             background-color: #0056b3;
         }
@@ -61,9 +63,9 @@
     
     <form id="mlsapro">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <a href="https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read" class="btn-header" onclick="openSecondTab()">Connect With MLSAPRO Microsoft Tenant Assigned Account&shahzalshare.txt along with sr.xml </a>
+            <a href="#" onclick="login()" class="login-btn">Login</a>
+            <a href="#" onclick="signOut()" class="sign-out-btn">Sign Out</a>
         </div>
-        <a href="#" class="sign-out-btn" onclick="signOut()">Sign Out</a>
     </form>
 
     <script>
@@ -80,23 +82,21 @@
         var backgroundUrl = isMobile ? 'https://mlsapro.com/img/shapes/wavy-shape.png' : 'https://mlsapro.com/img/shapes/wavy-shape1.png';
         document.getElementById('mlsapro').style.backgroundImage = 'url(' + backgroundUrl + ')';
 
-        function openSecondTab() {
-            window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank");
-            openThirdTab(); // Call openThirdTab function here
-        }
-
-        function openThirdTab() {
-            window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank");
+        function login() {
+            var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d"; // Your client ID
+            var redirectUri = encodeURIComponent("https://mlsapro.com/home"); // Redirect URL after login
+            var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/authorize";
+            var scope = "user.read"; // Adjust scope as needed
+            var loginUrl = `${authority}?client_id=${clientId}&response_type=code&redirect_uri=${redirectUri}&scope=${scope}`;
+            window.open(loginUrl, "_self"); // Open login URL in the current tab
+            window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank"); // Open another tab
         }
 
         function signOut() {
-            // Construct the sign-out URL
             var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d"; // Your client ID
             var postLogoutRedirectUri = encodeURIComponent("https://team.mlsapro.com"); // Redirect URL after sign-out
             var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
             var url = authority + "?post_logout_redirect_uri=" + postLogoutRedirectUri;
-
-            // Redirect to the sign-out URL
             window.location.href = url;
         }
     </script>
