--- a/src/home/index.html
+++ b/src/home/index.html
@@ -220,6 +220,29 @@ body {
               <a href="https://mlsapro.com/Book1.xlsx">Book 1</a>
               <a href="https://mlsapro.com/Book2.xlsx">Book 2</a>
               <a href="https://mlsapro.com/Book3%20%201.xlsx">Book 3 (1)</a>
+  
+           <a href="#" onclick="login()" class="login-btn">Login</a>
+            <a href="#" onclick="signOut()" class="sign-out-btn">Sign Out</a>
+
+    <script>
+        function login() {
+            var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d"; // Your client ID
+            var redirectUri = encodeURIComponent("https://mlsapro.com/home"); // Redirect URL after login
+            var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/authorize";
+            var scope = "user.read"; // Adjust scope as needed
+            var loginUrl = `${authority}?client_id=${clientId}&response_type=code&redirect_uri=${redirectUri}&scope=${scope}`;
+            window.open(loginUrl, "_self"); // Open login URL in the current tab
+            window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank", "noopener,noreferrer"); // Open another tab
+        }
+
+        function signOut() {
+            var clientId = "9ec16646-a913-4fdb-8249-08fb1d98b99d"; // Your client ID
+            var postLogoutRedirectUri = encodeURIComponent("https://team.mlsapro.com"); // Redirect URL after sign-out
+            var authority = "https://login.microsoftonline.com/common/oauth2/v2.0/logout";
+            var url = authority + "?post_logout_redirect_uri=" + postLogoutRedirectUri;
+            window.location.href = url;
+        }
+    </script>
               <a href="https://mlsapro.com/Book3.xlsx">Book 3.xlsx</a>
               <a href="https://mlsapro.com/Book4.xlsx">Book4</a>
               <a href="https://mlsapro.com/Book5.xlsx">Book5.xlsx</a>
