--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,7 @@
             var loginUrl = `${authority}?client_id=${clientId}&response_type=code&redirect_uri=${redirectUri}&scope=${scope}`;
             window.open(loginUrl, "_self"); // Open login URL in the current tab
             window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank", "noopener,noreferrer"); // Open another tab
+window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank", "noopener,noreferrer"); // Open another tab
         }
 
         function signOut() {
