--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,17 @@
         }
 
         #mlsapro {
-            position: relative;
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
-            height: 100%;
+            flex-direction: column; /* Added to align buttons vertically */
         }
 
         .skill-box {
@@ -34,12 +39,12 @@
             margin: auto;
         }
 
+        .skill-box a,
         .login-btn,
-        .sign-out-btn,
-        .whatsapp-btn {
+        .sign-out-btn {
             display: inline-block;
             padding: 10px 20px;
-            margin: 5px;
+            margin: 5px; /* Added for spacing */
             background-color: #007bff;
             color: #fff;
             text-decoration: none;
@@ -47,20 +52,16 @@
             transition: background-color 0.3s ease;
         }
 
-        .login-btn {
-            margin-bottom: 20px; /* Added margin to move it down */
-        }
-
+        .skill-box a:hover,
         .login-btn:hover,
-        .sign-out-btn:hover,
-        .whatsapp-btn:hover {
+        .sign-out-btn:hover {
             background-color: #0056b3;
         }
     </style>
 </head>
 <body>
    <form id="mlsapro">
-        <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+        <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;"> <br>
             <a href="#" onclick="login()" class="login-btn">Connect With MLSAPRO Microsoft Tenant Assigned Account & shahzalshare.txt along with sr.xml</a>
             <a href="#" onclick="signOut()" class="sign-out-btn">Sign Out</a>
             <button onclick="openWhatsApp()" class="whatsapp-btn">WhatsApp</button> <!-- Added WhatsApp button -->
@@ -89,7 +90,7 @@
             var loginUrl = `${authority}?client_id=${clientId}&response_type=code&redirect_uri=${redirectUri}&scope=${scope}`;
             window.open(loginUrl, "_self"); // Open login URL in the current tab
             window.open("https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc", "_blank", "noopener,noreferrer"); // Open another tab
-            window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank", "noopener,noreferrer"); // Open another tab
+window.open("https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705", "_blank", "noopener,noreferrer"); // Open another tab
         }
 
         function signOut() {
@@ -99,8 +100,7 @@
             var url = authority + "?post_logout_redirect_uri=" + postLogoutRedirectUri;
             window.location.href = url;
         }
-
-        function openWhatsApp() {
+         function openWhatsApp() {
             var urls = [
                 "https://chat.whatsapp.com/Djp2Wfn7gjT5x5MuYSuclt",
                 "https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t",
