--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
 <body>
    <form id="mlsapro">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <a href="#" onclick="login()" class="login-btn">Connect With MLSAPRO Microsoft Tenant Assigned Account & shahzalshare.txt along with sr.xml</a><br>
-            <a href="#" onclick="signOut()" class="sign-out-btn">Sign Out</a><br>
-            <button onclick="openWhatsApp()" class="whatsapp-btn">WhatsApp</button> <!-- Added WhatsApp button --><br>
+            <a href="#" onclick="login()" class="login-btn">Connect With MLSAPRO Microsoft Tenant Assigned Account & shahzalshare.txt along with sr.xml</a><br><br><br><br>
+            <a href="#" onclick="signOut()" class="sign-out-btn">Sign Out</a><br><br><br><br>
+            <a href="#" onclick="openWhatsApp()" class="whatsapp-btn">Login with WhatsApp</a>
         </div>
     </form>
 
